--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,14 +1,5 @@
 @charset "UTF-8";
 
-/* Typical Device Breakpoints
-------------------------------
-Pequenas telas: até 600px
-Celular: de 600px até 768px
-Tablet: 768px até 992px
-Desktop: 992px até 1200px
-Grandes telas: acima de 1200px
-*/
-
 @media screen and (min-width: 768px) and (max-width: 992px) {
 
     body {
@@ -17,6 +8,7 @@ Grandes telas: acima de 1200px
 
     section#login {
         width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -29,26 +21,38 @@ Grandes telas: acima de 1200px
         float: right;
         width: 70%;
     }
+    
+    
 }
 
 @media screen and (min-width: 992px) {
-    
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
 
+
     section#login {
-        width: 950px;
+        width: 990px;
+        height: 320px;
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
-
+    
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+    
+    div#formulario > p {
+        margin: 10px 0px 15px;
+        font-size: 1em;
     }
 }
